Prevent left overflow
Switched from a pseudo-element to an actual element,
because pseudo-elements are hard to deal with in react.
This will mess up anyone relying on styling that.

--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@
 	color: #fff;
 }
 
-.react-hint:after {
+.react-hint__caret {
 	content: '';
 	width: 0;
 	height: 0;
@@ -27,25 +27,25 @@
 	border: 5px solid transparent;
 }
 
-.react-hint--top:after {
+.react-hint--top .react-hint__caret {
 	top: auto;
 	border-bottom: none;
 	border-top-color: #000;
 }
 
-.react-hint--left:after {
+.react-hint--left .react-hint__caret {
 	left: auto;
 	border-right: none;
 	border-left-color: #000;
 }
 
-.react-hint--right:after {
+.react-hint--right .react-hint__caret {
 	right: auto;
 	border-left: none;
 	border-right-color: #000;
 }
 
-.react-hint--bottom:after {
+.react-hint--bottom .react-hint__caret {
 	bottom: auto;
 	border-top: none;
 	border-bottom-color: #000;
